# gimp-plugin-formulas

./: AUTHORS  BUGS  ChangeLog  FAQ  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in
help/: Makefile.am
help/en/: Makefile.am  gimp-help.xml
help/en/images/: Makefile.am
po/: ChangeLog  POTFILES.in  de.po  fr.po  gimp20-plugin-formulas.pot
src/: Makefile.am  char_masks.h  error.c  error.h  formula.c  formula.h  interface.c  interface.h  main.c  main.h  maths_func.c  maths_func.h  maths_op.c  maths_op.h  maths_tree.h  maths_val.c  maths_val.h  plugin-intl.h  render.c  render.h  symbols4gperf  tokens_table.c  tokens_table.h
